# mmm

./: Makefile.am  README.md  README.txt  build.sh  configure.ac  cpu-miner.c  miner.h  sha256.c  sha256_shani.c  util.c  winbuild-cross.sh  yespower.c
